--- a/source/dialogs/reference-windows/reference-windows-modal.html
+++ b/source/dialogs/reference-windows/reference-windows-modal.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-11">
-                            <table class="table table-bordered margin-left-1em">
+                            <table class="table table-bordered margin-left-1em refCurve">
                                 <thead>
                                     <tr>
                                         <th style='padding:1.5px;'></th>
