--- a/source/dialogs/reference-windows/reference-windows-modal.html
+++ b/source/dialogs/reference-windows/reference-windows-modal.html
@@ -56,25 +56,25 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-11">
-                            <table class="table table-bordered margin-left-1em refCurve">
+                            <table class="table table-bordered margin-left-1em refCurve availableCurve">
                                 <thead>
                                     <tr>
-                                        <th style='padding:1.5px;'></th>
-                                        <th style="width:25%">Curve Name</th>
-                                        <th>Left</th>
-                                        <th>Right</th>
-                                        <th>Vis.</th>
-                                        <th>Log</th>
+                                        <th width="2%"></th>
+                                        <th width="25%">Curve Name</th>
+                                        <th width="25%">Left</th>
+                                        <th width="25%">Right</th>
+                                        <th width="7%">Vis.</th>
+                                        <th width="7%">Log</th>
                                         <th>Color</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="ref_curve in wiModal.ref_Curves_Arr"
                                     ng-click="wiModal.setClickedRow($index)"
-                                    ng-class="{selected:$index == wiModal.SelectedRefCurve, 'display-none': ref_curve.flag === wiModal._FDEL}">
-                                        <td ng-class="{'color-navy': $index == wiModal.SelectedRefCurve}">
+                                    ng-class="{selected:$index == wiModal.SelectedRefCurve, 'display-none': ref_curve.flag === wiModal._FDEL}" >
+                                        <td ng-class="{'color-navy': $index == wiModal.SelectedRefCurve}" width="2%">
                                         </td>
-                                        <td>
+                                        <td width="25%">
                                             <ui-select ng-model="ref_curve.curve"
                                                 ng-change="wiModal.onSelectRefCurve($index, 'curve')">
                                                 <ui-select-match placeholder='Select a curve'>{{ref_curve.curve.name}}</ui-select-match>
@@ -84,17 +84,17 @@
                                             </ui-select-choices>
                                             </ui-select>
                                         </td>
-                                        <td>
+                                        <td width="25%">
                                             <input type="number" class="form-control wi-form-control"
                                             ng-model="ref_curve.left" step='1'
                                             ng-change="wiModal.onRefCurveChange($index)">
                                         </td>
-                                        <td>
+                                        <td width="25%">
                                             <input type="number" class="form-control wi-form-control"
                                             ng-model="ref_curve.right" step='1'
                                             ng-change="wiModal.onRefCurveChange($index)">
                                         </td>
-                                        <td>
+                                        <td width="7%">
                                             <div class='checkbox'>
                                                 <input style='margin-left:-10px;' 
                                                     type="checkbox" 
@@ -102,7 +102,7 @@
                                                     ng-change="wiModal.onRefCurveChange($index)">
                                             </div>
                                         </td>
-                                        <td>
+                                        <td width="7%">
                                             <div class='checkbox'>
                                                 <input style='margin-left:-10px;' 
                                                     type="checkbox" 
