--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -99,7 +99,7 @@
                                     <div class="padding-left-10-percent">
                                         <div class="form-group">
                                             <div class="col-sm-8">
-                                                <label for="isShowValueGrid>
+                                                <label for="isShowValueGrid">
                                                     <input type="checkbox" id="isShowValueGrid" value=""
                                                            ng-model="wiModal.props.general.showValueGrid">
                                                     Show Value Grid
