--- a/source/html/index.html
+++ b/source/html/index.html
@@ -81,11 +81,7 @@
     <script type="text/javascript" src="vendor/js/EventEmitter-4.0.3.min.js"></script>
     <script type="text/javascript" src="vendor/js/angularjs-dropdown-multiselect.min.js"></script>
     <script type="text/javascript" src="vendor/js/lodash.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script> -->
-    <!-- <script type="text/javascript" src="vendor/js/colorpicker-color.js"></script>
-    <script type="text/javascript" src="vendor/js/colorpicker-component.js"></script>
-    <script type="text/javascript" src="vendor/js/colorpicker-defaults.js"></script>
-    <script type="text/javascript" src="vendor/js/colorpicker-plugin-wrapper.js"></script> -->
+    <script src="vendor/js/math.min.js"></script>
     <script src="vendor/js/select.js"></script>
 
     <!--select line style && line width-->
