--- a/source/dialogs/auto-size-track/auto-size-track-modal.html
+++ b/source/dialogs/auto-size-track/auto-size-track-modal.html
@@ -23,7 +23,7 @@
                                     <select ng-model="wiModal.unit"
                                             class="form-control wi-form-control">
                                         <option value="inch">Inch</option>
-                                        <option value="meter">Meter</option>
+                                        <!-- <option value="meter">Meter</option> -->
                                     </select>
                                 </div>
                             </div>
@@ -32,15 +32,15 @@
                             <div class="form-group">
                                 <label>
                                     <input type="checkbox"
-                                           ng-model="wiModal.depth">
-                                    All Depth Track
+                                           ng-model="wiModal.log">
+                                    All Log Track
                                 </label>
                             </div>
                             <div class="form-group">
                                 <label>
                                     <input type="checkbox"
-                                           ng-model="wiModal.log">
-                                    All Log Track
+                                           ng-model="wiModal.depth">
+                                    All Depth Track
                                 </label>
                             </div>
                             <div class="form-group">
@@ -64,7 +64,7 @@
             </div>
             <div class="modal-footer">
                 <button class='btn btn-default' ng-click='wiModal.onApplyButtonClicked()'><span class="apply-16x16"></span>Run</button>
-                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>Run</button>
+                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>Ok</button>
                 <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>Cancel</button>
             </div>
         </div>
