--- a/source/dialogs/tvd-conversion/tvd-conversion-modal.html
+++ b/source/dialogs/tvd-conversion/tvd-conversion-modal.html
@@ -59,13 +59,15 @@
                         </div>
                         <div class="form-group">
                             <label class="col-sm-4">
-                                <input type="radio" value="curve" class="wi-form-control" name='useType' ng-model="wiModal.useType"> Using Curve
+                                <input type="radio" value="curve" class="wi-form-control" name='useType' ng-model="wiModal.useType"
+                                ng-change="wiModal.onUseTypeChanged()"> Using Curve
                             </label>
                             <label class="col-sm-2">
                                 Deviation
                             </label>
                             <div class="col-sm-2">
-                                <ui-select ng-model="wiModal.DevCurve">
+                                <ui-select ng-model="wiModal.DevCurve" ng-disabled="wiModal.useType == 'file'"
+                                ng-change="wiModal.loadCurves()">
                                     <ui-select-match placeholder='Select a curve'>{{wiModal.DevCurve.properties.name}}</ui-select-match>
                                     <ui-select-choices group-by="'datasetName'"
                                     repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
@@ -77,7 +79,8 @@
                                 Azimuth
                             </label>
                             <div class="col-sm-2">
-                                <ui-select ng-model="wiModal.AziCurve">
+                                <ui-select ng-model="wiModal.AziCurve" ng-disabled="wiModal.useType == 'file'"
+                                ng-change="wiModal.loadCurves()">
                                         <ui-select-match placeholder='Select a curve'>{{wiModal.AziCurve.properties.name}}</ui-select-match>
                                         <ui-select-choices group-by="'datasetName'"
                                         repeat='curve in wiModal.curvesArr | filter:{properties: {name:$select.search}} track by curve.id'>
@@ -88,7 +91,8 @@
                         </div>
                         <div class="form-group">
                             <label class="col-sm-4">
-                                <input type="radio" value="file" class="wi-form-control" name='useType' ng-model="wiModal.useType"> Using Servey File
+                                <input type="radio" value="file" class="wi-form-control" name='useType' ng-model="wiModal.useType"
+                                ng-change="wiModal.onUseTypeChanged()"> Using Servey File
                             </label>
                             <div class="col-sm-4">
                                 <input type="text" class="form-control wi-form-control" disabled ng-model="wiModal.SurveyFile.name">
@@ -96,10 +100,10 @@
                             <div class="col-sm-2">
                                 <label class="btn btn-default small-button width-100-percent"
                                 ng-class="{'label-disabled': wiModal.useType == 'curve'}">
-                                    <input class="display-none" type="file"
-                                    ngf-select ngf-pattern="'.txt,.xls,.xlsx'"
+                                    <input class="display-none" type="file" accept=".txt"
+                                    ngf-select
                                     ng-model="wiModal.SurveyFile"
-                                    ngf-max-size="100MB" ng-disabled="wiModal.useType == 'curve'"
+                                    ng-disabled="wiModal.useType == 'curve'"
                                     ng-change="wiModal.loadFile()"/>
                                     Browse</label>
                             </div>
@@ -139,40 +143,40 @@
                             <label class="col-sm-2">
                                 Elevation
                             </label>
-                            <div class="col-sm-1">
+                            <div class="col-sm-2">
                                 <input type="number" class="form-control wi-form-control" ng-model="wiModal.elevation">
-                            </div>
-                            <label class="col-sm-2">
-                                TVD reference at
-                            </label>
-                            <div class="col-sm-1">
-                                <input type="number" class="form-control wi-form-control" ng-model="wiModal.tvdRef">
                             </div>
                             <label class="col-sm-2">
                                 X at ref. depth
                             </label>
-                            <div class="col-sm-1">
+                            <div class="col-sm-2">
                                 <input type="number" class="form-control wi-form-control" ng-model="wiModal.xRef">
                             </div>
                             <label class="col-sm-2">
                                 Y at ref. depth
                             </label>
-                            <div class="col-sm-1">
+                            <div class="col-sm-2">
                                 <input type="number" class="form-control wi-form-control" ng-model="wiModal.yRef">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2">
+                                TVD reference at
+                            </label>
+                            <div class="col-sm-2">
+                                <input type="number" class="form-control wi-form-control" ng-model="wiModal.tvdRef">
+                            </div>
+                            <label class="col-sm-2">
                                 TVDSS Method
                             </label>
-                            <div class="col-sm-4">
+                            <div class="col-sm-2">
                                 <select class="form-control wi-form-control" ng-model="wiModal.tvdMethod">
                                   <option value="off">Off Shore</option>
                                   <option value="on">On Shore</option>
                                 </select>
                             </div>
-                            <label class="col-sm-2">Method</label>
-                            <div class="col-sm-4">
+                            <label class="col-sm-1">Formula</label>
+                            <div class="col-sm-3">
                                 <select class="form-control wi-form-control" ng-model="wiModal.calMethod">
                                     <option value="1">Average Angle</option>
                                     <option value="2">Balanced Tangential</option>
@@ -184,25 +188,95 @@
                         <div class="form-group">
                             <div class="col-sm-4">
                                 <label>Input</label>
-                                <div style="overflow-x:scroll;" id="inputDiv">
+                                <div style="overflow-x:overlay;" id="inputDiv">
                                     <table class="table table-bordered" id="inputTable">
                                         <thead style="display: table-row;">
-                                            <tr>
-                                                <th ng-if="wiModal.input.length">Index</th>
-                                                <th ng-repeat="row in wiModal.input[3] track by $index" style="min-width:100px;text-align:center">Column{{$index + 1}}</th>
+                                            <tr ng-if="wiModal.useType == 'file'">
+                                                <th>{{wiModal.input.length ? 'Index': '&nbsp;'}}</th>
+                                                <th ng-repeat="row in wiModal.input[wiModal.input.length - 1] track by $index" style="min-width:100px;text-align:center">Column{{$index + 1}}</th>
+                                            </tr>
+                                            <tr ng-if="wiModal.useType == 'curve'">
+                                                <th>Index</th>
+                                                <th style="min-width:100px;text-align:center">Depth</th>
+                                                <th style="min-width:100px;text-align:center">Deviation</th>
+                                                <th style="min-width:100px;text-align:center">Azimuth</th>
                                             </tr>
                                         </thead>
                                         <tbody style="height:200px;overflow-y:overlay;overflow-x:hidden;display:block">
-                                            <tr ng-repeat="row in wiModal.input">
+                                            <tr ng-repeat="row in wiModal.input" ng-if="wiModal.useType == 'file'">
                                                 <td style="min-width:49px;">{{$index}}</td>
                                                 <td ng-repeat="col in row track by $index" style="min-width:100px">{{col}}</td>
+                                            </tr>
+                                            <tr ng-if="wiModal.useType == 'curve'"
+                                            ng-repeat="row in wiModal.Size track by $index">
+                                                <td style="min-width:49px;">{{$index}}</td>
+                                                <td style="min-width:100px">{{(($index * wiModal.step) + wiModal.topDepth).toFixed(4)}}</td>
+                                                <td style="min-width:100px">{{wiModal.devArr[$index]}}</td>
+                                                <td style="min-width:100px">{{wiModal.aziArr[$index]}}</td>
                                             </tr>
                                         </tbody>
                                     </table>
                                 </div>
                             </div>
                             <div class="col-sm-8">
-                                <label>Preview</label>
+                                <wi-tabset>
+                                    <wi-tab heading='Preview'>
+                                        <div style="overflow-x:overlay;" id="previewDiv">
+                                            <table class="table table-bordered" id="previewTable">
+                                                <thead style="display: table-row;">
+                                                    <tr>
+                                                        <th style="min-width:100px;text-align:center">MD(Depth)</th>
+                                                        <th style="min-width:100px;text-align:center">TVD</th>
+                                                        <th style="min-width:100px;text-align:center">TVDSS</th>
+                                                        <th style="min-width:100px;text-align:center">Deviation</th>
+                                                        <th style="min-width:100px;text-align:center">Azimuth</th>
+                                                        <th style="min-width:100px;text-align:center">North</th>
+                                                        <th style="min-width:100px;text-align:center">East</th>
+                                                        <th style="min-width:100px;text-align:center">X</th>
+                                                        <th style="min-width:100px;text-align:center">Y</th>
+                                                        <th style="min-width:100px;text-align:center">Radius</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody style="height:195px;overflow-y:overlay;overflow-x:hidden;display:block">
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </wi-tab>
+                                    <wi-tab heading='Output'>
+                                        <div style="overflow-x:overlay;" id="outputDiv">
+                                            <table class="table table-bordered" id="outputTable">
+                                                <thead style="display: table-row;">
+                                                    <tr>
+                                                        <th style="min-width:100px;text-align:center">Depth</th>
+                                                        <th style="min-width:100px;text-align:center">Deviation</th>
+                                                        <th style="min-width:100px;text-align:center">Azimuth</th>
+                                                        <th style="min-width:100px;text-align:center">TVD</th>
+                                                        <th style="min-width:100px;text-align:center">TVDSS</th>
+                                                        <th style="min-width:100px;text-align:center">X</th>
+                                                        <th style="min-width:100px;text-align:center">Y</th>
+                                                        <th style="min-width:100px;text-align:center">North</th>
+                                                        <th style="min-width:100px;text-align:center">East</th>
+                                                        <th style="min-width:100px;text-align:center">Radius</th>
+                                                    </tr>
+                                                    <tr>
+                                                        <th style="min-width:100px;text-align:center">Curve Save</th>
+                                                        <th style="min-width:100px;text-align:center">Deviation</th>
+                                                        <th style="min-width:100px;text-align:center">Azimuth</th>
+                                                        <th style="min-width:100px;text-align:center">TVD</th>
+                                                        <th style="min-width:100px;text-align:center">TVDSS</th>
+                                                        <th style="min-width:100px;text-align:center">X</th>
+                                                        <th style="min-width:100px;text-align:center">Y</th>
+                                                        <th style="min-width:100px;text-align:center">North</th>
+                                                        <th style="min-width:100px;text-align:center">East</th>
+                                                        <th style="min-width:100px;text-align:center">Radius</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody style="height:160px;overflow-y:overlay;overflow-x:hidden;display:block">
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </wi-tab>
+                                </wi-tabset>
                             </div>
                         </div>
                         </div>
